recursion.cons.last.Last.scala.error
Erreur de compilation :
Last:4: error: not found: value length
  return length(l.tail) + 1
         ^